--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,30 @@ html,body{
 
 
 }
+.portfolioSub
+{
+background:#e1dad3;
+padding:5px;
+width:100%;
+
+}
+
+.appstr
+{
+margin-left:1%;
+padding:3px;
+background-color:#ebebeb;
+width:100px;
+
+}
+
+.appstr a
+{
+color:black;
+text-decoration:none;
+font-size: 1em;
+}
+
 
 .headerdiv
 {
