--- a/style/style.css
+++ b/style/style.css
@@ -43,16 +43,32 @@ width:100%;
 
 }
 
-.appstr
+.appstrA
 {
-margin-left:1%;
-padding:3px;
+margin-left:0%;
+padding:0px;
 background-color:#ebebeb;
-width:100px;
+width:50%;
+float: left;
+
+}
+.appstrB
+{
+margin-left:0%;
+padding:0px;
+background-color:#ebebeb;
+width:50%;
+float: right;
 
 }
 
-.appstr a
+.appstrA a
+{
+color:black;
+text-decoration:none;
+font-size: 1em;
+}
+.appstrB a
 {
 color:black;
 text-decoration:none;
